--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
+    <ion-title text-center>
       Buscar Película
     </ion-title>
   </ion-toolbar>
@@ -48,7 +48,7 @@
           <img [src]="pelicula.poster_path | imagen">
 
           <ion-card-header>
-            <ion-card-subtitle> {{ pelicula.release_date }} </ion-card-subtitle>
+            <ion-card-subtitle> {{ pelicula.release_date | date:'dd/MM/yyyy'}} </ion-card-subtitle>
           </ion-card-header>
 
           <ion-card-content>
