--- a/src/app/components/actor/actor.component.html
+++ b/src/app/components/actor/actor.component.html
@@ -1,5 +1,5 @@
 <ion-header translucent="true"  no-border>
-  <ion-toolbar color="light" transparent>
+  <ion-toolbar color="light" transparent style="margin-top:.74em;">
 
     <ion-buttons slot="start">
       <ion-button (click)="regresar()">
@@ -37,7 +37,7 @@ filter:brightness(0.33);
   margin: 0 auto;
   color:#EDF7F6;
   max-height:115%;">
-	<h1 text-center style="color:#008921;"><b>{{actor.name}}</b></h1>
+	<h1 text-center style="color:#008921;margin-top: 2em;"><b>{{actor.name}}</b></h1>
 </div >
 
 <div style="position: absolute;
