--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -5,7 +5,7 @@
   <ion-grid fixed>
     <ion-row padding>
       <ion-col size=11>
-        <h3 >Películas Nuevas</h3>
+
       </ion-col>
       <ion-col size="1">
         <h3><ion-icon name="search" style="color:#17202D" routerLink="/tab2"></ion-icon></h3>
@@ -25,7 +25,7 @@
   <ion-grid fixed>
     <ion-row>
       <ion-col>
-        <h3>Cartelera</h3>
+        <h3 text-center>Cartelera</h3>
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -36,7 +36,7 @@
   <ion-grid fixed>
     <ion-row>
       <ion-col>
-        <h3>Populares</h3>
+        <h3 text-center>Populares</h3>
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -47,7 +47,7 @@
  <ion-grid fixed >
     <ion-row>
       <ion-col>
-        <h3>Comunidad CUT</h3>
+        <h3 text-center>Comunidad CUT</h3>
          <ion-card routerLink="/tab3">
             <img src="http://cutonala.udg.mx/sites/default/files/noticias/images/unnamed_3.jpg"/>
             <div class="card-title">Propuestas</div>
