--- a/src/global.scss
+++ b/src/global.scss
@@ -9,7 +9,9 @@
 @import '~@ionic/angular/css/text-alignment.css';
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
-
+.danger{
+  color:red !important;
+}
 
 .poster {
     width: 110px !important;
@@ -99,3 +101,4 @@
   -webkit-animation-name: fadeIn;
   animation-name: fadeIn;
 }
+
