--- a/src/app/components/detalle/detalle.component.html
+++ b/src/app/components/detalle/detalle.component.html
@@ -1,105 +1,3 @@
-<!-- <ion-content>
-
- 
-
-  <img [src]="pelicula.backdrop_path | imagen" *ngIf="pelicula.backdrop_path">
-
-  <ion-grid>
-    <ion-row>
-      <ion-col size="4"></ion-col>
-      <ion-col size="4" class="poster-detalle-sobre">
-
-        <ion-card class="poster">
-          <img [src]="pelicula.poster_path | imagen" 
-               class="poster"
-               *ngIf="pelicula.poster_path">
-        </ion-card>
-
-      </ion-col>
-    
-    </ion-row>
-  </ion-grid>
-
-
-  <ion-grid fixed>
-     <ion-label >
-    <h1 text-center>  {{ pelicula.title }} </h1>
-  </ion-label>
-
-
-    <ion-row>
-      <ion-col size=12>
-
-        <ion-label> {{ pelicula.overview | slice: 0: oculto }}... </ion-label>
-        <ion-label color="primary"
-                   (click)="oculto = 5000"
-                   *ngIf="oculto !== 5000">Leer más!</ion-label>
-
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col size="12">
-
-        <ion-chip *ngFor="let genero of pelicula.genres"
-                  color="primary">
-          <ion-label>{{ genero.name }}</ion-label>
-        </ion-chip>
-
-      </ion-col>
-    </ion-row>
-
-  </ion-grid>
-
-
-  <ion-grid fixed>
-    <ion-row>
-      <ion-col>
-        <ion-label>Actores</ion-label>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-
-  <ion-slides [options]="slideOptActores">
-    <ion-slide *ngFor="let actor of actores">
-      
-      <ion-card class="card-actor">
-        <img *ngIf="!actor.profile_path" src="/assets/no-avatar.jpg">
-        <img *ngIf="actor.profile_path" [src]="actor.profile_path | imagen">
-
-        <ion-label class="actor-name"> {{ actor.name }}</ion-label>
-
-      </ion-card>
-
-    </ion-slide>
-  </ion-slides>
-
-
-
-</ion-content>
-
-
-<ion-footer no-border>
-  <ion-toolbar>
-
-    <ion-buttons slot="start">
-      <ion-button (click)="regresar()">
-        <ion-icon slot="start" name="arrow-round-back"></ion-icon>
-        <ion-label>Regresar</ion-label>
-      </ion-button>
-    </ion-buttons>
-
-    <ion-buttons slot="end">
-      <ion-button (click)="favorito()">
-        <ion-label>Favorito</ion-label>
-        <ion-icon slot="end" [name]="estrella"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-
-
-  </ion-toolbar>
-</ion-footer> -->
-
 <ion-header translucent="true"  no-border>
   <ion-toolbar color="light" transparent style="margin-top:.84em;">
 
@@ -127,7 +25,7 @@
    
   <div *ngIf="mostrar"  style="margin-top:-5em;background:#f0f4f8;" class="animated fadeIn slow" >
   <img [src]="pelicula.backdrop_path | imagen" class="cover" *ngIf="pelicula.backdrop_path">
-
+<img src="https://fakeimg.pl/1200x600/0B1B2D/?text=%20" class="" *ngIf="!pelicula.backdrop_path">
   <ion-grid>
     <ion-row>
       <ion-col size="4"></ion-col>
@@ -151,7 +49,7 @@
   </ion-label>
 
 
-    <ion-row>
+    <ion-row *ngIf="pelicula.overview">
       <ion-col size=12 style="text-align: justify !important;" padding>
 
         <ion-label ><span >{{ pelicula.overview | slice: 0: oculto }}...</span>  </ion-label>
@@ -174,12 +72,18 @@
     </ion-row>
 
   </ion-grid>
-  <ion-row>
+
+  <ion-row *ngIf="dia_cut">
     <ion-col></ion-col>
     <ion-col style="color:#17202F;" text-center>
+      <div (click)="mostrarfechas(dia_cut,hora_cut)">
+        
       <h2 >Fechas en carteleraCUT</h2>
-      <ion-icon name="calendar" style="zoom:3.0;color:#17202F;"></ion-icon>
-      <p><b>{{ pelicula.release_date | date:'dd/MM/yyyy'}}</b></p>
+      <ion-icon name="calendar" routerLink="/guardados" style="zoom:3.0;color:#17202F;"></ion-icon>
+      <p><b>{{dia_cut}}</b></p>
+      <p>{{hora_cut}}</p>
+      </div>
+      <!--<p><b>{{ pelicula.release_date | date:'dd/MM/yyyy'}}</b></p>-->
     </ion-col>
     <ion-col></ion-col>
   </ion-row>
@@ -209,7 +113,7 @@
           </ion-buttons>
         </ion-col>
         <ion-col>
-         <ion-buttons >
+         <ion-buttons (click)="proponer(pelicula.id)">
           <ion-button style="color:orange;">
              <p text-center>Proponer</p>
           </ion-button>
@@ -222,7 +126,7 @@
         </ion-col>
       </ion-row>
 
-
+<div *ngIf="actores.length > 0"> 
   <ion-grid fixed>
     <ion-row>
       <ion-col>
@@ -244,7 +148,9 @@
 
     </ion-slide>
   </ion-slides>
+</div>
 
+<div *ngIf="similares.length > 0"> 
 <ion-grid fixed>
     <ion-row>
       <ion-col>
@@ -265,18 +171,7 @@
 
     </ion-slide>
   </ion-slides> 
-
-
- <!--   <ion-card class=" animated delay-1s fadeIn slow">
-        <img *ngIf="!director.profile_path" src="/assets/no-avatar.jpg">
-        <img *ngIf="director.profile_path" [src]="director.profile_path | imagen">
-
-        <ion-label class="actor-name"><b> {{ director.name }}</b></ion-label>
-
-   </ion-card> -->
-
-
-
+</div>
 
 
   </div>
