--- a/src/app/components/slideshow-poster/slideshow-poster.component.html
+++ b/src/app/components/slideshow-poster/slideshow-poster.component.html
@@ -1,9 +1,8 @@
 <ion-slides [options]="slideOpts">
-  <ion-slide *ngFor="let pelicula of peliculas">
+  <ion-slide *ngFor="let pelicula of peliculas | filtroImagen">
     
-    <ion-card  (click)="verDetalle( pelicula.id )">
-      <img class="poster"
-           [src]="pelicula.poster_path | imagen">
+    <ion-card  (click)="verDetalle(pelicula.id)">
+      <img class="poster" [src]="pelicula.poster_path | imagen">
     </ion-card>
 
   </ion-slide>
