--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,5 +1,5 @@
 <ion-header no-border>
-  <ion-toolbar style="margin-top:.90em;">
+  <ion-toolbar style="margin-top:1em;">
     <ion-buttons slot="start">
       <ion-back-button text="" icon="arrow-round-back"></ion-back-button>
     </ion-buttons>
@@ -7,36 +7,22 @@
 </ion-header>
 
 <ion-content>
-  <h2 text-center style="margin-top: 1em;">Propuestas</h2>
-  <ion-card class="welcome-card" padding>
-
+  <h1 text-center style="margin-top: 1em;color:#F4A259">Votación</h1>
+<div padding  >
+  
     <ion-row>
-      <ion-col size="10"><h1>1.- SpiderMan</h1></ion-col>
-      <ion-col><h1 text-center>42</h1></ion-col>
+      <ion-col size="9"><h1 (click)="verDetalle( voto.id_movie )" style="color:#17202F"> Lugares</h1></ion-col>
+      <ion-col size="3"><h1 text-center style="color:orange;">votos</h1></ion-col>
     </ion-row>
-
-    <ion-row>
-      <ion-col size="10"> <h2>2.- Avengers</h2></ion-col>
-      <ion-col><h2 text-center>39</h2></ion-col>
+    <ion-row *ngFor="let voto of votos;let i = index">
+      <ion-col size="10">
+        <h4 (click)="verDetalle( voto.id_movie )" style="display: inline-block;vertical-align: middle;">
+          <ion-icon style="zoom:1.5;color:#BC4B51;display: inline-block;vertical-align: middle;" name="gift"></ion-icon>
+          Puesto n° {{i+1}}</h4>
+        </ion-col>
+      <ion-col><h1 text-center style="color:#5B8E7D">{{voto.contador}}</h1></ion-col>
     </ion-row>
-
-    <ion-row>
-      <ion-col size="10"><h3>3.- Avatar</h3></ion-col>
-      <ion-col><h3 text-center>31</h3></ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col size="10"><h4>4.- Orgullo y Prejuicio</h4></ion-col>
-      <ion-col><h4 text-center>23</h4></ion-col>
-    </ion-row>
-
-       
-    <ion-row>
-      <ion-col size="10"><h5>5.- Sherk</h5></ion-col>
-      <ion-col><h5 text-center>17 </h5></ion-col>
-    </ion-row>
-
+</div>
  
-  </ion-card>
 
 </ion-content>
