modifique vistas en ios y estoy agregando la funcionalidad de recordar

--- a/src/app/components/actor/actor.component.html
+++ b/src/app/components/actor/actor.component.html
@@ -1,4 +1,4 @@
-<ion-header translucent="true"  no-border>
+<ion-header   no-border>
   <ion-toolbar color="light" transparent style="margin-top:.74em;">
 
     <ion-buttons slot="start">
