edicion de erorres y mejoras en las notificaciones

--- a/src/app/components/detalle/detalle.component.html
+++ b/src/app/components/detalle/detalle.component.html
@@ -78,7 +78,7 @@
   <ion-row *ngIf="dia_cut">
     <ion-col></ion-col>
     <ion-col style="color:#17202F;" text-center>
-      <div (click)="mostrarfechas(dia_cut,hora_cut)">
+      <div (click)="mostrarfechas(dia_cut,hora_cut,pelicula.backdrop_path)">
         
       <h2 >Fechas en carteleraCUT</h2>
       <ion-icon name="calendar" routerLink="/guardados" style="zoom:3.0;color:#17202F;"></ion-icon>
