--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -14,7 +14,7 @@
   <ion-grid fixed>
     <ion-row padding >
       <ion-col size="8" >
-          <h3 >Cartelera Cut</h3>
+          <h3 >Cartelera <span style="color:green;font-weight: bold;">CUT</span></h3>
       </ion-col>
       <ion-col size="4" text-right>
         <h3>
@@ -52,7 +52,7 @@
         <h3 text-center>Comunidad CUT</h3>
          <ion-card routerLink="/tab3">
             <img src="http://cutonala.udg.mx/sites/default/files/noticias/images/unnamed_3.jpg"/>
-            <div class="card-title">Votos</div>
+            <div class="card-title">Votar</div>
         </ion-card>
       </ion-col>
     </ion-row>
@@ -65,5 +65,5 @@
 </ion-item>
 
   </ion-grid>
-<ion-button (click)="cerrar_sesion()"  shape="round" expand="full" color="danger" style="margin:  2em !important;">Salir</ion-button>
+<ion-button (click)="cerrar_sesion()"  shape="round" expand="full" color="danger" style="margin:  2em !important;">Cerrar Sesión</ion-button>
 </ion-content>
