--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -11,7 +11,7 @@
 <div padding  >
   
     <ion-row>
-      <ion-col size="9"><h1 (click)="verDetalle( voto.id_movie )" style="color:#17202F"> Lugares</h1></ion-col>
+      <ion-col size="9"><h1 (click)="verDetalle( voto.id_movie )" style="color:green"> Lugares</h1></ion-col>
       <ion-col size="3"><h1 text-center style="color:orange;">votos</h1></ion-col>
     </ion-row>
     <ion-row *ngFor="let voto of votos;let i = index">
