--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -5,7 +5,7 @@
             
         <ion-col>
           <ion-list inset>
-            <h2 text-center>Ingresa</h2>
+            <h2 text-center>Inicia sesión</h2>
             <ion-item >
               <ion-label><ion-icon name="finger-print"></ion-icon></ion-label>
               <ion-input   type="number" placeholder="Codigo" name="codigo" [(ngModel)]="codigo"   required></ion-input>
