edicion de erorres en assets

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -51,7 +51,7 @@
       <ion-col>
         <h3 text-center>Comunidad CUT</h3>
          <ion-card routerLink="/tab3">
-            <img src="http://www.cutonala.udg.mx/sites/default/files/noticias/images/unnamed_3.jpg"/>
+            <img src="./assets/cuton.jpg"/>
             <div class="card-title">Votar</div>
         </ion-card>
       </ion-col>
