edicion de votacion

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -50,10 +50,12 @@
     <ion-row>
       <ion-col>
         <h3 text-center>Comunidad CUT</h3>
-         <ion-card routerLink="/tab3">
-            <img src="./assets/cuton.jpg"/>
-            <div class="card-title">Votar</div>
-        </ion-card>
+         <ion-item routerLink="/tab3">
+    <ion-label style="vertical-align: middle;display: inline-block;">
+      <ion-icon name="bookmark" style="zoom:2.0;color:#265B75;vertical-align: middle;display: inline-block;"></ion-icon>
+      <b>Votar Pelicula</b>
+    </ion-label>
+</ion-item>
       </ion-col>
     </ion-row>
   
