edicion de erorres en assets

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -52,7 +52,7 @@
         <h3 text-center>Comunidad CUT</h3>
          <ion-item routerLink="/tab3">
     <ion-label style="vertical-align: middle;display: inline-block;">
-      <ion-icon name="bookmark" style="zoom:2.0;color:#265B75;vertical-align: middle;display: inline-block;"></ion-icon>
+      <ion-icon name="trophy" style="zoom:2.0;color:blue;vertical-align: middle;display: inline-block;"></ion-icon>
       <b>Votar Pelicula</b>
     </ion-label>
 </ion-item>
@@ -61,6 +61,7 @@
   
   <ion-item routerLink="/guardados">
     <ion-label style="vertical-align: middle;display: inline-block;">
+
       <ion-icon name="bookmark" style="zoom:2.0;color:#265B75;vertical-align: middle;display: inline-block;"></ion-icon>
       <b>Guardados</b>
     </ion-label>
