--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -50,14 +50,14 @@
     <ion-row>
       <ion-col>
         <h3 text-center>Comunidad CUT</h3>
-         <ion-item routerLink="/tab3">
-    <ion-label style="vertical-align: middle;display: inline-block;">
-      <ion-icon name="trophy" style="zoom:2.0;color:blue;vertical-align: middle;display: inline-block;"></ion-icon>
-      <b>Votar Pelicula</b>
-    </ion-label>
-</ion-item>
       </ion-col>
     </ion-row>
+         <ion-item routerLink="/tab3">
+    <ion-label style="vertical-align: middle;display: inline-block;">
+      <ion-icon name="trophy" style="zoom:2.0;color:#dcdc00;vertical-align: middle;display: inline-block;"></ion-icon>
+      <b>Votaciones</b>
+    </ion-label>
+</ion-item>
   
   <ion-item routerLink="/guardados">
     <ion-label style="vertical-align: middle;display: inline-block;">
