edicion de erorres en assets

--- a/src/app/fechascut/fechascut.page.html
+++ b/src/app/fechascut/fechascut.page.html
@@ -1,5 +1,5 @@
 <ion-header no-border>
-  <ion-toolbar>
+  <ion-toolbar style="margin-top:1.2em;">
     <ion-title>Fecha</ion-title>
     <ion-buttons slot="start">
       <ion-button (click)="regresar()">
