--- a/src/app/guardados/guardados.page.html
+++ b/src/app/guardados/guardados.page.html
@@ -1,7 +1,7 @@
 <ion-header no-border>
-  <ion-toolbar style="margin-top:1em;">
+  <ion-toolbar style="margin-top:2em;">
     <ion-buttons slot="start">
-      <ion-back-button text="" icon="arrow-round-back"></ion-back-button>
+      <ion-back-button text="" style="color:yellow;" icon="arrow-round-back"></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
